# Mini-Data-Pipeline

./: .gitignore  README.md  pyproject.toml
pipeline/: __init__.py  analytics.py  cleaners.py  filters.py  io_utils.py  loaders.py  main.py
tests/: test_cleaners.py  test_filters.py  test_io.py  test_pipeline.py
utils/: convert_jsonlgz_to_jsonl.py
