[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-data-pipeline"
version = "0.1.0"
description = "A lightweight data pipeline for LLM-style datasets"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tqdm",
    "tiktoken",
    "langdetect",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["pipeline"]
